[package]
name = "hf-bsh"
version = "0.1.1"
edition = "2021"
description = "Interactive bucket shell for the Hugging Face Hub — extension for the `hf` CLI"

[[bin]]
name = "hf-bsh"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "gzip", "rustls", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "14"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
shell-words = "1"
dirs = "5"
urlencoding = "2"
hf-xet = "1.5"
glob = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
